Update and rename kelm2023 to kelm2023.md

--- a/_publications/kelm2023.md
+++ b/_publications/kelm2023.md
@@ -1,15 +1,8 @@
 ---
 title: "How algorithmically curated online environments influence users’ political polarization: Results from two experiments with panel data"
 collection: publications
-permalink: /publication/2024-02-17-paper-title-number-4
-excerpt: 'This paper is about fixing template issue #693.'
-date: 2024-02-17
-venue: 'GitHub Journal of Bugs'
-paperurl: 'http://academicpages.github.io/files/paper3.pdf'
-citation: 'Kelm, O., Neumann, T., Behrendt, M., Brenneis, M., Gerl, K., Marschall S., Meißner, F., Harmeling, S. Vowe, G., Ziegele, M.. (2023). &quot;How algorithmically curated online environments influence users’ political polarization: Results from two experiments with panel data.&quot; <i>Computers in Human Behavior Reports</i>. '
----
-
-Social media platforms are often accused of disproportionally exposing their users to like-minded opinions,
+permalink: /publication/kelm2023
+excerpt: 'Social media platforms are often accused of disproportionally exposing their users to like-minded opinions,
 thereby fueling political polarization. However, empirical evidence of this causal relationship is inconsistent at
 best. One reason could be that many previous studies were unable to separate the effects caused by individual
 exposure to like-minded content from the effects caused by the algorithms themselves. This study presents results
@@ -18,4 +11,9 @@ selected arguments that were either in line or in contrast with their attitudes 
 reveal that exposure to like-minded arguments increased participants’ attitude polarization and affective po­
 larization more intensely than exposure to opposing arguments. Yet, contrary to popular expectations, these
 effects were not amplified by algorithmic selection. Still, for one topic, exposure to algorithmically selected
-arguments led to slightly stronger attitude polarization than randomly selected arguments.
+arguments led to slightly stronger attitude polarization than randomly selected arguments.'
+date: 2023-10-29
+venue: 'Computers in Human Behavior Reports'
+paperurl: 'http://academicpages.github.io/files/2023.chbr.pdf'
+citation: 'Kelm, O., Neumann, T., Behrendt, M., Brenneis, M., Gerl, K., Marschall S., Meißner, F., Harmeling, S. Vowe, G., Ziegele, M.. (2023). &quot;How algorithmically curated online environments influence users’ political polarization: Results from two experiments with panel data.&quot; <i>Computers in Human Behavior Reports</i>. '
+---
