--- a/_publications/kelm2023.md
+++ b/_publications/kelm2023.md
@@ -14,6 +14,6 @@ effects were not amplified by algorithmic selection. Still, for one topic, expos
 arguments led to slightly stronger attitude polarization than randomly selected arguments.'
 date: 2023-10-29
 venue: 'Computers in Human Behavior Reports'
-paperurl: 'http://academicpages.github.io/files/2023.chbr.pdf'
+paperurl: 'http://mabehrendt.github.io/files/2023.chbr.pdf'
 citation: 'Kelm, O., Neumann, T., Behrendt, M., Brenneis, M., Gerl, K., Marschall S., Meißner, F., Harmeling, S. Vowe, G., Ziegele, M.. (2023). &quot;How algorithmically curated online environments influence users’ political polarization: Results from two experiments with panel data.&quot; <i>Computers in Human Behavior Reports</i>. '
 ---
