--- a/_publications/2023kelm.md
+++ b/_publications/2023kelm.md
@@ -1,7 +1,7 @@
 ---
 title: "How algorithmically curated online environments influence users’ political polarization: Results from two experiments with panel data"
 collection: publications
-permalink: /publication/2023_how_algorithmically
+permalink: /publication/2023kelm
 excerpt: 'Social media platforms are often accused of disproportionally exposing their users to like-minded opinions,
 thereby fueling political polarization. However, empirical evidence of this causal relationship is inconsistent at
 best. One reason could be that many previous studies were unable to separate the effects caused by individual
